syntax = "proto3";

import "Protos/base.proto";
import "Protos/recurso.proto";
import "Protos/tarefa.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "Cpnucleo.RazorPages.Protos.RecursoTarefaProto";

package recursoTarefa;

service RecursoTarefaProto {

	rpc Incluir (RecursoTarefaModel) returns (RecursoTarefaModel);
	rpc Listar (google.protobuf.Empty) returns (ListarReply);
	rpc Consultar (base.BaseRequest) returns (RecursoTarefaModel);
	rpc Alterar (RecursoTarefaModel) returns (base.BaseReply);
	rpc Remover (base.BaseRequest) returns (base.BaseReply);
	rpc ListarPorTarefa (base.BaseRequest) returns (ListarPorTarefaReply);
}

message RecursoTarefaModel {

	string Id = 1;
	string IdRecurso = 2;
	string IdTarefa = 3;
	int32 HorasDisponiveis = 4;
	string DataInclusao = 5;
	recurso.RecursoModel Recurso = 6;
	tarefa.TarefaModel Tarefa = 7;
}

message ListarReply {

    repeated RecursoTarefaModel Lista = 1;
}

message ListarPorTarefaReply {

    repeated RecursoTarefaModel Lista = 1;
}